@@ -29,11 +29,6 @@
     <artifactId>wildfly-arquillian-container-managed</artifactId>
     <name>WildFly: Arquillian Managed Container</name>
     <packaging>jar</packaging>
-
-    <properties>
-        <jvmArgs>-Xmx1G -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true</jvmArgs>
-        <jvmDebugArgs>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</jvmDebugArgs>
-    </properties>
     
     <dependencies>
         <dependency>
